--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 <!--     {% include_cached browser-upgrade.html %} -->
     {% include _browser-upgrade.html %}
     {% include _navigation.html %}
-    {% include_cached masthead.html %}
+<!--     {% include_cached masthead.html %} -->
 
     <div class="initial-content">
       {{ content }}
@@ -34,7 +34,7 @@
     <div id="footer" class="page__footer">
       <footer>
         {% include _footer.html %}
-        {% include_cached footer.html %}
+<!--         {% include_cached footer.html %} -->
       </footer>
     </div>
 
