--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     {% include _navigation.html %}
 <!--     {% include_cached masthead.html %} -->
     
-    {% if page.image.feature %}
+    {% if<!-- page.image.feature %}
     <div class="image-wrap">
     <img src=
         {% if page.image.feature contains 'http' %}
@@ -31,7 +31,7 @@
         <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
     {% endif %}
     </div><!-- /.image-wrap -->
-    {% endif %}
+    {% endi-->f %}
     
     <div class="initial-content">
       {{ content }}
