--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -98,8 +98,8 @@ figcaption {
 	padding: .5em 1em;
 	text-indent: 0;
 	@include font-rem(14);
-	background-color: $body-color;
-	border: 1px solid darken($body-color,20);
+	background-color: lighten($text-color, 70);
+/* 	border: 1px solid darken($body-color,20); */
 	@include rounded(3px);
 }
 
