--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,6 +24,7 @@ sitemap: false
 @import "forms";
 @import "page";
 @import "archive";
+@import "utilities";
 @import "vendor/font-awesome/font-awesome";
 @import "vendor/academicons-1.6.0/academicons";
 @import "vendor/magnific-popup/magnific-popup";
