--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -76,8 +76,14 @@ $linkcolorfocus 	: darken($linkcolorvisited, 10);
    Breakpoints
    ========================================================================== */
 
-$micro            : "only screen and (min-width: 30em)";
+$mic/*ro            : "only screen and (min-width: 30em)";
 $small            : "only screen and (min-width: 37.5em)";
 $medium           : "only screen and (min-width: 48em)";
 $large            : "only screen and (min-width: 62em)";
-$x-large          : "only screen and (min-width: 86.375em)";
+$x-l*/arge          : "only screen and (min-width: 86.375em)";
+$small: 600px !default;
+$medium: 768px !default;
+$medium-wide: 900px !default;
+$large: 1024px !default;
+$x-large: 1280px !default;
+$max-width: $x-large !default;
