--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,11 +12,8 @@ sitemap: false
 */
 
 // Partials
-@import "vendor/font-awesome/font-awesome";
-@import "vendor/academicons-1.6.0/academicons";
-@import "vendor/magnific-popup/magnific-popup";
 @import "vendor/breakpoint/breakpoint";
-
+@include breakpoint-set("to ems", true);
 @import "variables";
 @import "grid";
 @import "mixins";
@@ -30,4 +27,7 @@ sitemap: false
 @import "page";
 @import "archive";
 @import "utilities";
+@import "vendor/font-awesome/font-awesome";
+@import "vendor/academicons-1.6.0/academicons";
+@import "vendor/magnific-popup/magnific-popup";
 //@import "vendor/google/fonts";
