--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -2,6 +2,215 @@
    SINGLE PAGE/POST
    ========================================================================== */
 
+/*
+   Header
+   ========================================================================== */
+
+.navigation-wrapper {
+	@include container;
+	padding: 2em 0 1em;
+	font-family: $heading-font;
+	font-weight: 700;
+	text-transform: uppercase;
+	@include clearfix;
+}
+
+/* Site name */
+.site-name {
+	@include grid(12,10);
+	@include prefix(12,1);
+	@include suffix(12,1);
+	margin-bottom: 1em;
+	float: none;
+	display: block;
+	@include font-rem(24);
+	@media #{$small} {
+		@include grid(12,2);
+		@include prefix(12,0.5);
+		@include suffix(12,0.5);
+		@include font-rem(16);
+	}
+	@media #{$x-large} {
+		@include grid(12,1.5);
+		@include prefix(12,2);
+	}
+}
+
+/* Top navigation links */
+.top-navigation {
+	@include grid(12,10);
+	@include prefix(12,1);
+	@include suffix(12,1);
+	margin-bottom: 1em;
+	float: none;
+	display: block;
+	@media #{$small} {
+		@include grid(12,9);
+		@include prefix(12,0);
+		@include suffix(12,0);
+	}
+	@media #{$x-large} {
+		@include grid(12,8);
+	}
+	ul {
+		margin: 0;
+		padding: 0;
+		clear: both;
+		list-style-type: none;
+	}
+	li {
+		display: block;
+		list-style-type: none;
+		border-bottom: 1px solid lighten($black,80);
+		border-bottom: 1px solid fade($black,10);
+		@include font-rem(16);
+		&:last-child {
+			border-bottom: 0 solid transparent;
+		}
+		@media #{$small} {
+			display: inline;
+			margin-right: 25px;
+			white-space: nowrap;
+			border-bottom: 0 solid transparent;
+		}
+		a {
+			display: block;
+			padding: 10px 0;
+			decoration: none;
+			border-bottom: 0 solid transparent;
+			@include transition(all .2s);
+			@media #{$small} {
+				display: inline;
+				padding: 0;
+			}
+		}
+	}
+}
+
+/* Animated lines for mobile nav button */
+$button-size: 1.5rem;
+@mixin navicon-line() {
+	display: inline-block;
+	width: $button-size;
+	height: $button-size/7;
+	// line color
+	background: $white;
+	border-radius: $button-size/14;
+	transition: .3s;
+}
+.navicon-lines-button {
+	padding: $button-size/4 $button-size/2;
+	transition: .3s;
+	cursor: pointer;
+	user-select: none;
+	border-radius: $button-size/7;
+}
+.navicon-lines-button:hover {
+	opacity: 1;
+}
+.navicon-lines-button:active {
+	transition: 0;
+}
+.navicon-lines {
+	margin-right: 10px;
+	margin-bottom: $button-size/5;
+	// create middle line
+	@include navicon-line;
+	position: relative;
+	// create the upper and lower lines as pseudo-elements of the middle line
+	&:before,
+	&:after {
+		@include navicon-line;
+		position: absolute;
+		left: 0;
+		content: '';
+		-webkit-transform-origin: $button-size/14 center;
+		transform-origin: $button-size/14 center;
+	}
+	&:before { top: $button-size/4; }
+	&:after { top: -$button-size/4; }
+}
+.navicon-lines-button:hover {
+	opacity: 1;
+	.navicon-lines {
+		&:before { top: $button-size/3.5; }
+		&:after { top: -$button-size/3.5; }
+	}
+}
+.navicon-lines-button.x.active .navicon-lines {
+	// hide the middle line
+	background: transparent;
+	// overlap the lines by setting both their top values to 0
+	&:before,
+	&:after {
+		-webkit-transform-origin: 50% 50%;
+		transform-origin: 50% 50%;
+		top: 0;
+		width: $button-size;
+	}
+	// rotate the lines to form the x shape
+	&:before {
+		-webkit-transform: rotate3d(0,0,1,45deg);
+		transform: rotate3d(0,0,1,45deg);
+	}
+	&:after {
+		-webkit-transform: rotate3d(0,0,1,-45deg);
+		transform: rotate3d(0,0,1,-45deg);
+	}
+}
+// Style the toggle menu link and hide it
+.nav .navtoogle {
+	@include font-rem(18);
+	font-weight: normal;
+	background-color: $black;
+	color: $white;
+	border: none;
+	cursor: pointer;
+	@media #{$small} {
+		display: none;
+	}
+}
+.nav button {
+	border: none;
+	background: none;
+}
+.navtoogle i {
+	z-index:-1;
+}
+.icon-menu {
+	position: relative;
+	top: 3px;
+	line-height: 0;
+}
+// When JavaScript is disabled, we hide the toggle button
+.no-js .nav .navtoggle {
+	display: none;
+}
+// When JavaScript is disabled, we show the menu
+.no-js .nav ul {
+	max-height: 30em;
+	overflow: hidden;
+}
+// When JavaScript is enabled, we hide the menu
+.js .nav ul {
+	max-height: 0;
+	overflow: hidden;
+	@media #{$small} {
+		max-height: 30em;
+	}
+}
+// Displaying the menu when the user has clicked on the button
+.js .nav .active + ul {
+	max-height: 30em;
+	overflow: hidden;
+	-webkit-transition: max-height .4s;
+	-moz-transition: max-height .4s;
+	-o-transition: max-height .4s;
+	-ms-transition: max-height .4s;
+	transition: max-height .4s;
+}
+
+
 #main {
   @include clearfix;
   margin-left: auto;
@@ -246,6 +455,54 @@ body {
     color: #fff;
     text-decoration: none;
   }
+}
+
+/* Large feature header image */
+.image-wrap {
+	position: relative;
+	margin-bottom: 2em;
+	@include clearfix;
+/*	&:after {
+		content: " ";
+		display: block;
+		position: absolute;
+		bottom: 0;
+		left: 8%;
+		width: 0;
+		height: 0;
+		border: 10px solid transparent;
+		border-bottom-color: $bodycolor;
+		@media #{$small} {
+			left: 25%;
+		}
+		@media #{$large} {
+			border-width: 20px;
+		}
+		@media #{$x-large} {
+			left: 33.333333333%;
+		}
+	}
+*/	img {
+		width: 100%;
+		height: auto;
+		-ms-interpolation-mode: bicubic;
+	}
+	.headline-wrap {
+		position: absolute;
+		bottom: 25px;
+		@include prefix(12,1);
+		@media #{$small} {
+			left: 25%;
+			margin-left: 0;
+		}
+		@media #{$x-large} {
+			@include prefix(12,1);
+		}
+		h1, h2 {
+			color: $white;
+			@include text-shadow(0 1px 2px rgba(0,0,0,.25));
+		}
+	}
 }
 
 /*
@@ -553,4 +810,78 @@ body {
       padding-right: 0;
     }
   }
+}
+
+/* Author sidebar */
+.article-author-side {
+	display: none;
+	.bio-photo {
+		max-width: 110px;
+		@include rounded(150px);
+	}
+	@media #{$small} {
+		display: block;
+		@include grid(12,2);
+		@include prefix(12,0.5);
+		@include suffix(12,0.5);
+/*		h3,
+		p,
+*/		.author-social {
+			/*display: block;*/
+			/*max-width: 125px;*/
+		}
+		h3 {
+			margin-top: 10px;
+			margin-bottom: 10px;
+		}
+		p {
+			margin-bottom: 20px;
+		}
+		.author-social {
+			margin-bottom: 5px;
+		}
+	}
+	@media #{$large} {
+		h3,
+		.bio-photo,
+		p,
+		.author-social {
+			max-width: 150px;
+		}
+	}
+	@media #{$x-large} {
+		@include grid(12,1.5);
+		@include prefix(12,2);
+	}
+}
+
+/* Author module - mobile only */
+.article-author-bottom {
+	margin-bottom: 1em;
+	@media #{$small} {
+		display: none;
+	}
+	.bio-photo {
+		float: left;
+		margin-right: 25px;
+		max-width: 100px;
+		@include rounded(150px);
+	}
+	@media #{$large} {
+		h3,
+		.bio-photo,
+		p,
+		.author-social {
+			max-width: 150px;
+		}
+	}
+}
+
+/* Post content wrapper */
+.article-wrap {
+	// Dotted line underlines for links
+	p > a,
+	li > a {
+		text-decoration: underline;
+	}
 }
