--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -6,16 +6,21 @@
    Typography
    ========================================================================== */
 
-$doc-font-size: 16 !default;
+$doc-font-size: 16;
+$doc-line-height: 26;
+$paragraph-indent: false;
+$base-font: 'PT Serif', serif;
+$heading-font: 'Raleway', sans-serif;
+$code-font: Monaco, "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
+$alt-font: $base-font;
 
 /* paragraph indention */
 $paragraph-indent: false !default; // true, false (default)
 $indent-var: 1.3em !default;
 
 /* system typefaces */
-$serif: Georgia, Times, serif !default;
-$sans-serif: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
-  "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+$serif:'PT Serif', serif !default;
+$sans-serif: 'Raleway', sans-serif !default;
 $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 
 /* sans serif typefaces */
@@ -29,7 +34,7 @@ $bodoni: "Bodoni MT", serif !default;
 $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
-$global-font-family: $sans-serif !default;
+$global-font-family: $serif !default;
 $header-font-family: $sans-serif !default;
 $caption-font-family: $serif !default;
 
@@ -54,6 +59,18 @@ $h-size-6: 1em !default; // ~16px
 /*
    Colors
    ========================================================================== */
+
+$bodycolor      : #fff;
+$body-color     : $bodycolor;
+$textcolor      : #333332;
+$text-color     : $textcolor;
+$border-color   : $text-color;
+$basecolor 		  : #343434;
+$compcolor 		  : spin($basecolor, 180);
+$bordercolor    : $basecolor;
+$white          : #fff;
+$black          : #111;
+$accentcolor    : $black;
 
 $gray: #7a8288 !default;
 $dark-gray: mix(#000, $gray, 50%) !default;
