--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,57 +1,55 @@
 <!doctype html>
-<!--
-  Minimal Mistakes Jekyll Theme 4.19.3 by Michael Rose
-  Copyright 2013-2019 Michael Rose - mademistakes.com | @mmistakes
-  Free for personal and commercial use under the MIT license
-  https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE
--->
-<html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
-  <head>
-    {% include _head.html %}
-<!--     {% include head/custom.html %} -->
-  </head>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
+<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
+<head>
+{% include _head.html %}
+</head>
 
-  <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
-<!--     {% include_cached skip-links.html %} -->
-<!--     {% include_cached browser-upgrade.html %} -->
-    {% include _browser-upgrade.html %}
-    {% include _navigation.html %}
-<!--     {% include_cached masthead.html %} -->
-    
-    {% if page.image.feature %}
-    <div class="image-wrap">
-    <img src=
-        {% if page.image.feature contains 'http' %}
-        "{{ page.image.feature }}"
-        {% else %}
-        "{{ site.url }}/images/{{ page.image.feature }}"
-        {% endif %}
-    alt="{{ page.title }} feature image">
-    {% if page.image.credit %}
-        <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
+<body class="page">
+
+{% include _browser-upgrade.html %}
+
+{% include _navigation.html %}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
+{% if page.image.feature %}
+  <div class="image-wrap">
+  <img src=
+    {% if page.image.feature contains 'http' %}
+      "{{ page.image.feature }}"
+    {% else %}
+      "{{ site.url }}/images/{{ page.image.feature }}"
     {% endif %}
-    </div><!-- /.image-wrap -->
+  alt="{{ page.title }} feature image">
+  {% if page.image.credit %}
+    <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
+  {% endif %}
+  </div><!-- /.image-wrap -->
+{% else %}
+  <div class="image-wrap"><img src="{{ site.url }}/images/fractal-header.jpg"></div>
+{% endif %}
+
+<div id="main" role="main">
+  <article class="page">
+    {% if page.title %}
+      <h1>{{ page.title }}</h1>
     {% endif %}
-    
-    <div class="initial-content">
-      {{ content }}
-    </div>
-
-    {% if site.search == true %}
-      <div class="search-content">
-        {% include_cached search/search_form.html %}
-      </div>
+    {% if site.owner.disqus-shortname and page.comments == true %}
+      <section id="disqus_thread"></section><!-- /#disqus_thread -->
     {% endif %}
+  </article>
+</div><!-- /#index -->
 
-    <div id="footer" class="page__footer">
-      <footer>
-        {% include _footer.html %}
-<!--         {% include_cached footer.html %} -->
-      </footer>
-    </div>
+<div class="footer-wrap">
+  <footer>
+    {% include _footer.html %}
+  </footer>
+</div><!-- /.footer-wrap -->
 
-    {% include _scripts.html %}
+{% include _scripts.html %}
 
-  </body>
+</body>
 </html>
-
