--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -241,6 +241,7 @@ $button-size: 1.5rem;
 		@media #{$x-large} {
 			@include grid(12,4.5);
 		}
+    }
 	.widepage {
 		@include container;
 		@include grid(6,10);
