--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
 {% include _head.html %}
 </head>
 
-<!-- <body class="page"> -->
-<body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
+<body class="widepage">
+
 
 {% include _browser-upgrade.html %}
 
