--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,11 @@
 
 <body class="widepage">
 
-
 {% include _browser-upgrade.html %}
 
 {% include _navigation.html %}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
 {% if page.image.feature %}
   <div class="image-wrap">
@@ -39,6 +40,9 @@
     <div class="article-wrap">
       {{ content }}
     </div><!-- /.article-wrap -->
+    {% if site.owner.disqus-shortname and page.comments == true %}
+      <section id="disqus_thread"></section><!-- /#disqus_thread -->
+    {% endif %}
   </article>
 </div><!-- /#index -->
 
