--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -248,12 +248,14 @@ $button-size: 1.5rem;
 		@include prefix(12,1);
 		@include suffix(12,1);
         @include push(12,12);
+        @include last;
 		margin-bottom: 2em;
 		@media #{$small} {
 			@include grid(12,6);
 			@include prefix(12,0);
 			@include suffix(12,0);
             @include push(12,3);
+            @include last;
 		}
 		@media #{$x-large} {
 			@include grid(12,4.5);
