--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -247,7 +247,7 @@ $button-size: 1.5rem;
 		@include grid(12,12);
 		@include prefix(12,1);
 		@include suffix(12,1);
-        @include push(12,12);6
+        @include push(12,12);
 		margin-bottom: 2em;
 		@media #{$small} {
 			@include grid(12,8);
@@ -256,7 +256,7 @@ $button-size: 1.5rem;
             @include push(12,3);
 		}
 		@media #{$x-large} {
-			@include grid(12,6);
+			@include grid(12,8);
 		}
     }
 }
