--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -4,11 +4,11 @@
 
 hr { 
 	display: block; 
-	margin: 0; 
+	margin: 1px; 
 	padding: 0;
 	height: 1px; 
 	border: 0; 
-	border-top: 0;
+	border-top: 1px solid #ccc;
 	border-bottom: 1px solid #fff; 
 }
 
