--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,7 +23,7 @@ sitemap: false
 @import "elements";
 @import "forms";
 @import "page";
-/* @import "archive"; */
+@import "archive";
 /* @import "utilities"; */
 @import "vendor/font-awesome/font-awesome";
 @import "vendor/academicons-1.6.0/academicons";
