--- a/_sass/archive.scss
+++ b/_sass/archive.scss
@@ -6,13 +6,13 @@
   margin-top: 1em;
   margin-bottom: 2em;
 
-  @include breakpoint($large) {
+  @include breakpoint($largeb) {
     float: right;
     width: calc(100% - #{$right-sidebar-width-narrow});
     padding-right: $right-sidebar-width-narrow;
   }
 
-  @include breakpoint($x-large) {
+  @include breakpoint($x-largeb) {
     width: calc(100% - #{$right-sidebar-width});
     padding-right: $right-sidebar-width;
   }
@@ -110,7 +110,7 @@
   opacity: 0.5;
   border-radius: $border-radius 0 0 0;
 
-  @include breakpoint($large) {
+  @include breakpoint($largeb) {
     padding: 5px 10px;
   }
 
@@ -139,11 +139,11 @@
   .grid__wrapper {
     /* extend grid elements to the right */
 
-    @include breakpoint($large) {
+    @include breakpoint($largeb) {
       margin-right: -1 * $right-sidebar-width-narrow;
     }
 
-    @include breakpoint($x-large) {
+    @include breakpoint($x-largeb) {
       margin-right: -1 * $right-sidebar-width;
     }
   }
@@ -152,7 +152,7 @@
 .grid__item {
   margin-bottom: 2em;
 
-  @include breakpoint($small) {
+  @include breakpoint($smallb) {
     float: left;
     width: span(5 of 10);
 
@@ -167,7 +167,7 @@
     }
   }
 
-  @include breakpoint($medium) {
+  @include breakpoint($mediumb) {
     margin-left: 0; /* override margin*/
     margin-right: 0; /* override margin*/
     width: span(3 of 12);
@@ -209,18 +209,18 @@
   .archive__item-excerpt {
     display: none;
 
-    @include breakpoint($medium) {
+    @include breakpoint($mediumb) {
       display: block;
       font-size: $type-size-6;
     }
   }
 
   .archive__item-teaser {
-    @include breakpoint($small) {
+    @include breakpoint($smallb) {
       max-height: 200px;
     }
 
-    @include breakpoint($medium) {
+    @include breakpoint($mediumb) {
       max-height: 120px;
     }
   }
@@ -245,7 +245,7 @@
   margin-bottom: 2em;
   font-size: 1.125em;
 
-  @include breakpoint($small) {
+  @include breakpoint($smallb) {
     float: left;
     margin-bottom: 0;
     width: span(4 of 12);
@@ -311,7 +311,7 @@
       bottom: 0;
     }
 
-    @include breakpoint($small) {
+    @include breakpoint($smallb) {
       .archive__item-teaser {
         float: left;
         width: span(5 of 12);
@@ -352,7 +352,7 @@
       bottom: 0;
     }
 
-    @include breakpoint($small) {
+    @include breakpoint($smallb) {
       text-align: right;
 
       .archive__item-teaser {
@@ -396,7 +396,7 @@
       bottom: 0;
     }
 
-    @include breakpoint($small) {
+    @include breakpoint($smallb) {
       text-align: center;
 
       .archive__item-teaser {
@@ -436,11 +436,11 @@
 
   .wide {
   .archive {
-    @include breakpoint($large) {
+    @include breakpoint($largeb) {
       padding-right: 0;
     }
 
-    @include breakpoint($x-large) {
+    @include breakpoint($x-largeb) {
       padding-right: 0;
     }
   }
