--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -67,3 +67,14 @@ $small            : "only screen and (min-width: 37.5em)";
 $medium           : "only screen and (min-width: 48em)";
 $large            : "only screen and (min-width: 62em)";
 $x-large          : "only screen and (min-width: 86.375em)";
+
+/*
+   Breakpoints 2
+   ========================================================================== */
+
+$smallb: 600px !default;
+$mediumb: 768px !default;
+$medium-wideb: 900px !default;
+$largeb: 1024px !default;
+$x-largeb: 1280px !default;
+$max-widthb: $x-large !default;
