--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,8 @@ sitemap: false
 */
 
 // Partials
+@import "minimal-mistakes/vendor/breakpoint/breakpoint";
+@include breakpoint-set("to ems", true);
 @import "variables";
 @import "grid";
 @import "mixins";
