--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -103,6 +103,15 @@ figcaption {
 	@include rounded(3px);
 }
 
+.noticeco {
+	margin-top: 1.5em;
+	padding: .5em 1em;
+	text-indent: 0;
+	background-color: lighten($info-color, 50);
+/* 	border: 1px solid darken($body-color,20); */
+	@include rounded(3px);
+}
+
 /* 
    Blockquotes
    ========================================================================== */
