--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -8,8 +8,6 @@
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: $heading-font;
-    margin: 0px;
-    margin-bottom: 0px;
 }
 h1 {
 	@include font-size(32);
@@ -29,7 +27,7 @@ h5 {
 h6 {
 	@include font-size(14);
 }
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
     margin: 0px;
     margin-bottom: 0px;
 }
