--- a/_sass/archive.scss
+++ b/_sass/archive.scss
@@ -234,6 +234,7 @@
   @include clearfix();
   margin: auto;
   border-bottom: 1px solid $white;
+  position: absolute;
 
   .archive__item-title {
     margin-bottom: 0;
