--- a/_sass/archive.scss
+++ b/_sass/archive.scss
@@ -232,7 +232,8 @@
 
 .feature__wrapper {
   @include clearfix();
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   border-bottom: 1px solid $white;
   position: absolute;
 
