--- a/_sass/archive.scss
+++ b/_sass/archive.scss
@@ -232,8 +232,7 @@
 
 .feature__wrapper {
   @include clearfix();
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   border-bottom: 1px solid $white;
 
   .archive__item-title {
