--- a/_includes/feature_row.html
+++ b/_includes/feature_row.html
@@ -1,6 +1,12 @@
 .center-div {
-     margin: 0 auto;
-     width: 100px; 
+     position: absolute;
+     margin: auto;
+     top: 0;
+     right: 0;
+     bottom: 0;
+     left: 0;
+     width: 500px;
+     background-color: #fff;
 }
 
 {% if include.id %}
