--- a/_sass/archive.scss
+++ b/_sass/archive.scss
@@ -234,7 +234,7 @@
   @include clearfix();
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
+  width: span(8 of 12);
 /*   border-bottom: 1px solid $white; */
 
   .archive__item-title {
