--- a/_sass/archive.scss
+++ b/_sass/archive.scss
@@ -232,6 +232,7 @@
 
 .feature__wrapper {
   @include clearfix();
+  position: absolute;
   margin: 0 auto;
   width: 100%;
 /*   border-bottom: 1px solid $white; */
