--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -42,3 +42,12 @@
 <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
 <!-- 32x32 -->
 <link rel="shortcut icon" href="{{ site.url }}/favicon.png">
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=XXX-YOURID-XXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'XXX-YOURID-XXX);
+</script>
